--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,26 @@
     box-sizing: border-box;
 }
 
+/*General styles*/
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /*Generic project syles*/
+    color: #3a3a3a;
+}
+
 /* Header */
 header {
- background-color:lightcoral
+    background-color: lightcoral;
 }
 
 main {
-    background-color: lightblue
+    background-color: lightblue;
+    /*Make main element take any surprus space to push footer down*/
+    flex:1 0 auto;
 }
 
 footer {
-    background-color: orange
+    background-color: orange;
 }
