--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+ 
 /*Asterisk wildcar selector to override default styles added by the browser*/
 * {
     padding: 0;
@@ -12,6 +15,7 @@ body {
     flex-direction: column;
     /*Generic project syles*/
     color: #3a3a3a;
+    font-family: "Lato"; sans-serif; 
 }
 
 /* Header */
@@ -23,7 +27,8 @@ header {
 main {
     background-color: lightblue;
     /*Make main element take any surprus space to push footer down*/
-    flex: 1 0 auto;
+    flex: 
+    1 0 auto;
 }
 
 /*Footer*/
