--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,16 @@ body {
     flex-direction: column;
     /*Generic project syles*/
     color: #3a3a3a;
-    font-family: "Lato"; sans-serif; 
+    font-family: "Lato", sans-serif; 
 }
 
 /* Header */
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: "Oswald", sans-serif; 
 }
 
 /*Main content*/
