--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,10 +116,23 @@ footer {
         .nav-toggle-label {
             display:none; 
         }
+        #logo {
+            font-size:200%;
+            line-height: 75px; 
+            margin: 0 0.5rem; 
+        }
+     /*Main Content*/
+     main {
+        /*Push main content down to accomodate larger header*/
+        margin-top: 79px;
 
-
+     }   
 }
-
+/*Media query: tablets and larger (922px and up)*/
+@media screen and (min-width:922px) {
+    #menu a:hover {
+     border-bottom: 1px solid #3a3a3a;
+    }
 
 
 
