--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../css/images/loverunning.webp")
+    background: url("../css/images/loverunning.webp") no-repeat center center/cover;
 }
 /*Footer*/
 #social-networks {
