Add styles to cover-text in hero section, correct height in media query for ipad size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 
+
 /*General styles*/
 body {
     min-height: 100vh;
@@ -18,6 +19,12 @@ body {
     font-family: "Lato", sans-serif; 
 }
 
+h1, h2, h3 {
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
 /* Header */
 header {
     background-color: #ffffff;
@@ -36,13 +43,6 @@ header a {
     color: inherit; 
 }
 
-h1 {
-    font-family: "Oswald", sans-serif; 
-    text-transform: uppercase; 
-    letter-spacing: 2px; 
-    color: #252525; 
-}
-
 /*Main content*/
 main {
     /*Make main element take any surprus space to push footer down*/
@@ -55,6 +55,23 @@ main {
     height: 600px;
     width: 100%;
     background: url("../css/images/loverunning.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /*Final rgb value sets the opacity so it is semi-transparent*/
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 /*Footer*/
 #social-networks {
@@ -113,44 +130,56 @@ nav {
 footer {
     background-color: orange;
 }
-/*Media query: tablets and larger (768px and up)*/
-@media screen and (min-width:768px) {
-    /*Header*/
-        nav{
-            display: block;
-            position: relative; 
-            box-shadow: none; 
-            width: fit-content; 
-            padding-right: 1rem; 
- 
-        }
-        #menu {
-            display:flex;
-        }
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
 
-        #menu > li {
-            padding-left: 1rem;
-        }
-        .nav-toggle-label {
-            display:none; 
-        }
-        #logo {
-            font-size:200%;
-            line-height: 75px; 
-            margin: 0 0.5rem; 
-        }
-     /*Main Content*/
-     main {
-        /*Push main content down to accomodate larger header*/
-        margin-top: 79px;
-
-     }   
-}
-/*Media query: tablets and larger (922px and up)*/
-@media screen and (min-width:922px) {
-    #menu a:hover {
-     border-bottom: 1px solid #3a3a3a;
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
     }
 
+    #menu {
+        display: flex;
+    }
 
+    #menu>li {
+        padding-left: 1rem;
+    }
 
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+    #hero {
+     height: 900px;
+     width: 100%;
+     background: url(../css/images/loverunning.webp) no-repeat center center/cover;
+     position: relative;
+        }
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+    /*Hero*/
+    #cover-text {
+        width: 300px;
+        right: 50px; 
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
