--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
- 
+
 /*Asterisk wildcar selector to override default styles added by the browser*/
 * {
     padding: 0;
@@ -16,38 +16,41 @@ body {
     flex-direction: column;
     /*Generic project syles*/
     color: #3a3a3a;
-    font-family: "Lato", sans-serif; 
+    font-family: "Lato", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: "Oswald", sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
+
 /* Header */
 header {
     background-color: #ffffff;
     padding: 0 1rem;
-    position: fixed; 
-    z-index: 99; 
-    width: 100%; 
-    box-shadow: 0 2px 2px #3a3a3a; 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: baseline; 
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
-    text-decoration: none; 
-    color: inherit; 
+    text-decoration: none;
+    color: inherit;
 }
 
 /*Main content*/
 main {
     /*Make main element take any surprus space to push footer down*/
     flex: 1 0 auto;
-    margin-top: 47px; 
+    margin-top: 47px;
 }
 
 /*Hero section styles*/
@@ -70,92 +73,99 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
+}
 
 #reasons {
-        width: 90%;
-        margin: 20px auto;
-    }
-
-    #reasons h2 {
-        margin-bottom: 20px;
-        text-align: center;
-        font-size: 280%;
-    }
-
-    #benefits-physical>div,
-    #benefits-mental>div {
-        line-height: 20px;
-        margin-bottom: 20px;
-    }
-
-    #benefits p {
-        padding: 0 20px;
-    }
-
-    #benefits hr {
-        border-top: 1px solid #3a3a3a;
-        margin: 5px 0;
-    }
+    width: 90%;
+    margin: 20px auto;
 }
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical>div,
+#benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+
 /*Footer*/
 #social-networks {
-    text-align:center;
+    text-align: center;
     padding: 20px 0;
-    display:flex; 
-    justify-content:space-evenly;
-    list-style-type: none; 
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
+
 #social-networks i {
-    font-size:160%;
+    font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
 }
+
 #menu {
     font-size: 110%;
-    letter-spacing: 4px; 
-    list-style-type: none; 
+    letter-spacing: 4px;
+    list-style-type: none;
 }
 
-#menu > li {
-    margin-bottom: 1em; 
+#menu>li {
+    margin-bottom: 1em;
 }
 
 .active {
-    border-bottom:1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 
 }
 
 /*Navbar styles with dropdown toggle*/
 nav {
     position: absolute;
-    background-color:#ffffff; 
+    background-color: #ffffff;
     width: 100%;
-    left: 0; 
-    padding: 0 1rem; 
+    left: 0;
+    padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
-    display: none; 
-    top: 100%; 
+    display: none;
+    top: 100%;
 
 }
 
 /*Nav toggle*/
 #nav-toggle:checked~nav {
-    display: block; 
+    display: block;
 }
 
 #nav-toggle {
-    display:none; 
+    display: none;
 }
 
 .nav-toggle-label {
-    font-size: 2rem; 
+    font-size: 2rem;
 }
+
 /*Footer*/
 footer {
     background-color: orange;
 }
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -185,21 +195,24 @@ footer {
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
     #hero {
-     height: 900px;
-     width: 100%;
-     background: url(../css/images/loverunning.webp) no-repeat center center/cover;
-     position: relative;
-        }
+        height: 900px;
+        width: 100%;
+        background: url(../css/images/loverunning.webp) no-repeat center center/cover;
+        position: relative;
+    }
+
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
+
     /*Hero*/
     #cover-text {
         width: 300px;
-        right: 50px; 
+        right: 50px;
     }
 }
 
