--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,9 @@ main {
     margin: 5px 0;
 }
 
+#circle-cover-bg {
+    background:  url("../css/images/reasons-image.webp") no-repeat center center/cover;
+}
 
 /*Footer*/
 #social-networks {
