--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,20 @@ main {
 }
 
 #circle-cover-bg {
-    background:  url("../css/images/reasons-image.webp") no-repeat center center/cover;
+    background: url('../css/images/reasons-image.webp') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*Footer*/
