--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,13 @@ main {
     justify-content: center;
 }
 
+/*Meet-up times section*/
+#times {
+    background: url('../css/images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
 /*Footer*/
 #social-networks {
     text-align: center;
